--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,10 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Source+Code+Pro&display=swap"
       rel="stylesheet" />
+
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Thilak Voruganti</title>
   </head>
   <body>
